# biocentral_server

./: .env.ci  .env.example  .env.local  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Caddyfile  Changelog.md  Contributing.md  Dockerfile  Dockerfile.triton  LICENSE  Makefile  README.md  UV_MIGRATION.md  biocentral_server.py  biocentral_server.spec  ci-constraints.txt  citation.cff  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.triton-test.yml  docker-compose.yml  gunicorn.conf.py  init-db.sql  memory_results.json  package.json  pyproject.toml  pyproject.toml.poetry-backup  run-biocentral_server.py  run-local.py
.changeset/: open-schools-teach.md
.github/pull_request_template/: default.md  simple.md
.github/workflows/: build.yml  docker-build-push.yml  release.yml  test.yml
assets/: landing.html
biocentral_server/: __init__.py  main.py
biocentral_server/bay_opt/: __init__.py  al_config.py  al_endpoint.py  al_iteration_pipeline.py  al_iteration_task.py  al_simulation_task.py  bayesian_optimization_endpoint.py  bayesian_optimization_task.py  botraining.py  endpoint_models.py  gaussian_process_models.py
biocentral_server/bayesian_optimization/: README.md  __init__.py  bayesian_optimization_endpoint.py  bayesian_optimization_task.py  botraining.py  example_apicall_fetching.json  example_apicall_training.json  gaussian_process_models.py
biocentral_server/biocentral/: __init__.py  endpoint_models.py  models.py  service_endpoint.py
biocentral_server/biocentral_service/: __init__.py  endpoint_models.py  service_endpoint.py
biocentral_server/custom_models/: __init__.py  biotrainer_inference_task.py  biotrainer_task.py  custom_models_endpoint.py  endpoint_models.py
biocentral_server/data_analysis/: __init__.py  analysis_functions.py  sequence_analysis_endpoint.py
biocentral_server/embeddings/: __init__.py  biotrainer_triton_embedder.py  embed.py  embedder_config.py  embedding_task.py  embeddings_endpoint.py  endpoint_models.py  projection_endpoint.py  protspace_task.py  umap_analysis.py
biocentral_server/plm_eval/: __init__.py  autoeval.py  autoeval_task.py  endpoint_models.py  flip_data_handler.py  flip_initializer.py  plm_eval_endpoint.py  setup_flip.py
biocentral_server/ppi/: __init__.py  endpoint_models.py  ppi_endpoint.py
biocentral_server/predict/: __init__.py  endpoint_models.py  metadata_endpoint.py  model_factory.py  multi_prediction_task.py  predict_endpoint.py  predict_initializer.py  single_prediction_task.py  triton_predictor.py
biocentral_server/predict/model_utils/: __init__.py  utils.py
biocentral_server/predict/models/: __init__.py  biocentral_prediction_model.py
biocentral_server/prediction_models/: __init__.py  biotrainer_inference_task.py  biotrainer_process.py  biotrainer_task.py  prediction_models_endpoint.py
biocentral_server/protein_analysis/: __init__.py  analysis_functions.py  sequence_analysis_endpoint.py
biocentral_server/proteins/: __init__.py  endpoint_models.py  proteins_endpoint.py  taxoniq_patch.py  taxonomy.py
biocentral_server/server_entrypoint/: __init__.py  init_server.py  server_app_state.py  server_thread.py
biocentral_server/server_frontend/: __init__.py  main_gui.py
biocentral_server/server_frontend/presentation/: __init__.py  control_panel.py  custom_widgets.py
biocentral_server/server_management/: __init__.py  embedding_database.py  process_manager.py  task_interface.py  user_manager.py  utils.py
biocentral_server/server_management/custom_middleware/: __init__.py  body_size_limit_middleware.py
biocentral_server/server_management/device_management/: __init__.py  device_service.py
biocentral_server/server_management/embedding_database/: __init__.py  database_strategy.py  embedding_database.py  embedding_database_factory.py  postgresql_strategy.py  tinydb_strategy.py
biocentral_server/server_management/file_management/: __init__.py  file_manager.py  path_manager.py  seaweedfs_backend.py  storage_backend.py  storage_file_type.py
biocentral_server/server_management/library_adapters/: __init__.py  biotrainer_custom_observer.py  biotrainer_custom_pipeline.py  biotrainer_database_storage_trainer.py  biotrainer_embedding_adapter.py
biocentral_server/server_management/monitoring/: __init__.py  metrics.py  metrics_service.py  research_stats.py
biocentral_server/server_management/monkey_patches/: __init__.py  (+2 more)
biocentral_server/utils/: __init__.py  config_verification.py  constants.py  format_utils.py  logging.py  path_util.py
doc/: getting_started.md
doc/architecture/: file_storage.md
docs/: getting_started.md
docs/Contributing/: development_setup.md  testing.md
docs/Modules/: bayesian_optimization.md  predict.md
docs/architecture/: architecture-eval-v1.md  fastapi-migration-plan-v1.md
monitoring/prometheus/: prometheus.yml
storage/model-repository/: .gitignore  Dockerfile.init  SETUP.md  init_models.py  triton_entrypoint.sh
tests/: TEST_OVERVIEW.md  __init__.py  conftest.py  oracle_metrics.csv  setup.cfg  test_analysis_functions.py
tests/fixtures/: __init__.py  download_onnx_models.py  fixed_embedder.py  fixed_embeddings.py  server_embedder.py  test_dataset.py  test_sequences.fasta
tests/performance/: __init__.py  conftest.py  test_embedding_throughput.py  test_esm2_throughput.py  test_memory_usage.py  test_scaling.py
tests/property/: __init__.py
tests/scripts/: Explanation_tests.md  conftest.py  explore_metamorphic_relations.py  fetch_uniref50_sequences.py  flakiness_detection.py  metamorphic_relations.py  mutation_score.py  plot_aa_mutation.py  plot_x_masking.py  run_all_experiments.py  run_metamorphic_experiments.py  test_aa_mutation_sensitivity.py  test_batch_invariance.py  test_idempotency.py  test_metamorphic_integration.py  test_progressive_x_masking.py  test_projection_determinism.py  test_random_baseline.py  test_reversed_sequence.py
tests/server_management/: test_embeddings_database.py  test_triton_embeddings.py  test_triton_predictions.py
tests/test_logs/: 0_integration-test.txt  1_unit-test (ubuntu-latest, 3.12).txt
tests/unit/: __init__.py
(+155 files in other folders)
