[project]
name = "biocentral-server"
version = "1.1.0"
description = "Compute server for the biocentral frontend"
authors = [
    { name = "Sebastian Franz", email = "sebastian.franz@tum.de" },
    { name = "Tobias Olenyi", email = "tobias.olenyi@tum.de" },
]
license = { text = "GPL-3.0" }
readme = "README.md"
requires-python = ">=3.11.9,<3.13"
dependencies = [
    # Backend
    "taxoniq>=1.0.1,<2.0.0",
    "blosc2>=2.7.1,<3.0.0",
    "psycopg[binary]>=3.2.3,<4.0.0",
    "rq>=2.1.0,<3.0.0",
    "python-dotenv>=1.2.1,<2.0.0",
    "gpytorch>=1.14,<2.0",
    "onnxruntime-gpu>=1.16.0,<2.0.0; sys_platform == 'linux'",
    "onnxruntime>=1.16.0,<2.0.0; sys_platform != 'linux'",
    "tritonclient[grpc]>=2.64.0",
    "circuitbreaker>=2.0.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "prometheus-client>=0.24.1",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "fastapi-limiter>=0.1.6",
    # Git Dependencies
    "biotrainer @ git+https://github.com/biocentral/biotrainer.git@feature/bioengineer-base",
    "protspace @ git+https://github.com/tsenoner/protspace.git@v3.1.1",
    "hvi_toolkit @ git+https://github.com/SebieF/hvi_toolkit.git@maintenance/update-biotrainer",
    "vespag @ git+https://github.com/biocentral/VespaG.git@onnx-deployment",
    "tmbed @ git+https://github.com/DenizOzturk95/TMbed.git@setuptools-fix",
]

[dependency-groups]
dev = [
    "pytest==8.3.1",
    "pytest-cov>=4.1.0",
    "pip-audit>=2.7.3,<3.0.0",
    "ruff>=0.12.1",
    "pre-commit>=4.2.0",
    "pytest-asyncio>=1.2.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.100.0",
    "mutmut>=2.4.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "performance: marks tests as performance benchmarks",
    "integration: marks tests as integration tests",
    "triton: marks tests that require Triton server",
]

[tool.pytest.benchmark]
min_rounds = 5
disable_gc = true
warmup = true


[tool.uv]
override-dependencies = [
    "perf-analyzer>=2.59.1; sys_platform == 'linux'",
]
[tool.coverage.run]
source = ["biocentral_server"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true