[project]
name = "biocentral-server"
version = "1.1.1"
description = "Compute server for the biocentral frontend"
authors = [
    { name = "Sebastian Franz", email = "sebastian.franz@tum.de" },
    { name = "Tobias Olenyi", email = "tobias.olenyi@tum.de" },
]
license = { text = "GPL-3.0" }
readme = "README.md"
requires-python = ">=3.11.9,<3.13"
dependencies = [
    # Backend
    "taxoniq>=1.0.1,<2.0.0",
    "blosc2>=4.1.2,<5.0.0",
    "psycopg[binary]>=3.3.3,<4.0.0",
    "rq>=2.7.0,<3.0.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "onnxruntime-gpu>=1.24.3,<2.0.0; sys_platform == 'linux'",
    "onnxruntime>=1.24.3,<2.0.0; sys_platform != 'linux'",
    "tritonclient[grpc]>=2.66.0",
    "circuitbreaker>=2.0.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "fastapi>=0.135.1",
    "uvicorn>=0.42.0",
    "fastapi-limiter>=0.1.6,<0.2.0",
    # Git Dependencies
    "biotrainer @ git+https://github.com/biocentral/biotrainer.git@feature/bioengineer-base-dev",
    "protspace @ git+https://github.com/tsenoner/protspace.git@v3.1.1",
    "hvi_toolkit @ git+https://github.com/SebieF/hvi_toolkit.git@maintenance/update-biotrainer",
    "vespag @ git+https://github.com/biocentral/VespaG.git@onnx-deployment",
    "tmbed @ git+https://github.com/biocentral/TMbed.git@onnx-deployment",
    "apscheduler>=3.11.2",
]

[dependency-groups]
dev = [
    "pytest==8.3.1",
    "pytest-rerunfailures>=14.0",
    "pytest-cov>=4.1.0",
    "pytest-order>=1.2.0",
    "pytest-xdist>=3.5.0",
    "pip-audit>=2.7.3,<3.0.0",
    "ruff>=0.15.6",
    "pre-commit>=4.2.0",
    "pytest-asyncio>=1.2.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.100.0",
    "mutmut>=2.4.4",
    "psutil>=5.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "performance: marks tests as performance benchmarks",
    "integration: marks tests as integration tests",
    "property: marks property-based/oracle tests",
    "triton: marks tests that require Triton server",
]

[tool.pytest.benchmark]
min_rounds = 5
disable_gc = true
warmup = true


[tool.uv]
override-dependencies = [
    "perf-analyzer>=2.59.1; sys_platform == 'linux'",
]
[tool.coverage.run]
source = ["biocentral_server"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    # Task files (async execution logic)
    "*_task.py",
    # Triton/external integration
    "*/triton_mixin.py",
    "*/biotrainer_triton_embedder.py",
    # Model implementations (except __init__.py)
    "*/predict/models/binding/*",
    "*/predict/models/conservation/*",
    "*/predict/models/disorder/*",
    "*/predict/models/localization/*",
    "*/predict/models/membrane/*",
    "*/predict/models/secondary_structure/*",
    "*/predict/models/toxicity/*",
    "*/predict/models/variant_effect/*",
    "*/predict/models/base_model/base_model.py",
    "*/predict/models/base_model/onnx_mixin.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true
